# glpi_dashboard-2025

./: .gitignore  .pre-commit-config.yaml  ANALISE_PADROES_COMPONENTES.md  ANALISE_PROFUNDA_TECNICOS_N3_1000_TICKETS.md  ANALISE_TECNICA_COMPLETA.md  ANALISE_TECNICA_CONSISTENCIA.md  API_ENDPOINTS_DOCUMENTATION.md  BACKEND_ARCHITECTURE_DOCUMENTATION.md  BYTEROVER.md  CACHE_CONSOLIDATION_CHANGES.md  CATALOGO_MELHORIAS_PRESERVAR.md  CHANGELOG_RANKING_TECNICOS.md  CHECKPOINT_FUNCIONAL_DOCUMENTATION.md  CLEANUP_REPORT.md  CODEX_ASSISTANT_WORKFLOW.md  CONHECIMENTO_GRADIENTES_BEAUTIFUL_CARDS.md  DATA_VALIDATION_REPORT.md  EXTRATOR_BASE_CONHECIMENTO_GLPI.py  GUIA_PADROES_COMPONENTES.md  GUIA_SOLUCAO_RANKING_TECNICOS.md  KNOWLEDGE_BASE_CONFIGURACOES.md  KNOWLEDGE_BASE_UPDATED.md  MAINTENANCE_PLAN.md  PLANO_CORRETIVO_ERR_ABORTED.md  PLANO_RESTAURACAO_DASHBOARD_ORIGINAL.md  PROMPT_IMPLEMENTACAO_SISTEMA_CORES.md  README.md  README_METRICS_COLLECTOR.md  README_RANKING_TECNICOS.md  RELATORIO_AUDITORIA_UTILS_FRONTEND.md  RELATORIO_CORRECAO_FINAL_RANKING_TECNICOS.md  RESUMO_CONFIGURACAO_COPILOT.md  SISTEMA_CORES_DASHBOARD_GLPI.md  SOLUCAO_ESTRUTURADA_DASHBOARD.md  TYPESCRIPT_FIXES_DOCUMENTATION.md  VALIDACAO_DOCUMENTACAO_ATUAL.md  VALIDATION_PROTOCOL.md  check_glpi_field_mapping.py  como_configurar_trae_ai.txt  create_sample_knowledge_base.py  (+16 more)
glpi_dashboard/: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  ANALISE_LIMPEZA_RAIZ.md  API_ERRORS_RESOLUTION_REPORT.md  APP_REFACTORING_REPORT.md  BACKEND_ARCHITECTURE_ANALYSIS.md  BACKEND_CONSOLIDATION_PRIORITIES.md  BACKEND_CONSOLIDATION_PROMPTS.md  BACKEND_TIMEOUT_FIX_REPORT.md  BYTEROVER.md  CI_SETUP.md  CLEANUP_SUMMARY.md  CONFIG_CONSOLIDATION_REPORT.md  CONTEXT_ANALYSIS.md  CONTRIBUTING.md  COPILOT_README.md  DIAGNOSTICO_CARDS_STATUS.md  EVIDENCE_REPORT.md  FILTROS_DATA_IMPLEMENTACAO_COMPLETA.md  FRONTEND_BACKEND_FIXES_REPORT.md  GARANTIA_FUNCIONAMENTO_INTERFACE.md  GUIA_IMPLEMENTACAO_REFATORACAO.md  KNOWLEDGE_BASE.md  METRICS_SOLUTION_DOCUMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE1_CLEANUP_REPORT.md  PHASE2_ARCHITECTURAL_REFACTORING_REPORT.md  PHASE3_4_CONSOLIDATION_REPORT.md  PLANO_IMPLEMENTACAO_FILTROS_DATA.md  PROMPTS_EXECUCAO_MIGRACAO.md  PROPOSTA_REFATORACAO_ARQUITETURAL.md  README-DOCKER.md  README.md  README_CLEAN_STRUCTURE.md  README_EXTRACTOR.md  REFACTORING_PROMPTS.md  RELATORIO_AUDITORIA_COMPONENTES_DASHBOARD.md  (+31 more)
glpi_dashboard/.github/: dependabot.yml  pull_request_template.md
glpi_dashboard/backend/: .coveragerc  .dockerignore  .pre-commit-config.yaml  .pylintrc  AUDITORIA_COMPLETA_SISTEMA_RANKING.md  Dockerfile  MONITORING_README.md  Makefile  RELATORIO_CORRECOES_FINAIS_IMPLEMENTADAS.md  RELATORIO_PROBLEMAS_ARQUITETURAIS_RESOLVIDOS.md  SOLUCOES_RANKING_TECNICOS.md  TECHNICAL_DECISIONS.md  TICKET_DISTRIBUTION_ANALYSIS.md  __init__.py  app.py  app_minimal.py  app_simple.py  asgi.py  assignment_based_technician_solution.py  audit_dashboard_metrics.py  audit_glpi_complete.py  check_groups_only.py  clean_test.py  complete_technician_analysis.json  field_mapping_test_results_20250830_183250.json  fix_event_loop.py  fix_glpi_field_mapping.py  frontend_api_test_com_filtro_de_nível_n1.json  frontend_api_test_com_filtro_de_nível_n2.json  frontend_api_test_com_filtro_de_nível_n3.json  frontend_api_test_com_filtro_de_nível_n4.json  frontend_api_test_com_filtros_de_data_(últimos_30_dias).json  frontend_api_test_sem_filtros_(chamada_padrão_do_frontend).json  glpi_field_mapping_test_20250830_182933.json  glpi_monitoring_task.xml  glpi_response_criteria_search.json  investigate_tickets.py  main.py  monitor_data_consistency.py  monitoring_config.json  (+15 more)
glpi_dashboard/config/: README.md  ai_agent_system.yaml  sandbox.json  system.yaml
glpi_dashboard/data/: solicitantes.csv  tecnicos.csv  tecnicos_formatted.csv
glpi_dashboard/docs/: AI_ASSISTANT_CONTEXT.md  AI_INTEGRATION_GUIDE.md  ANALISE_CRITICA_TIMEOUT_METRICAS.md  AUDITORIA_COMPLETA_RESULTADOS.md  BACKEND_ARCHITECTURE_DOCUMENTATION.md  BYTEROVER.md  BYTEROVER_backup_20250202_230000.md  BYTEROVER_backup_20250910_131941.md  BYTEROVER_backup_20250910_223210.md  BYTEROVER_backup_20250911_144032.md  CHANGELOG.md  CONFIGURATION_DOCUMENTATION.md  DATA_FLOW_DOCUMENTATION.md  FRONTEND_ARCHITECTURE_DOCUMENTATION.md  GLPI_KNOWLEDGE_BASE.md  GUIA_IMPLEMENTACAO_FILTROS_DATA_GLPI.md  SISTEMA_TRATAMENTO_ERROS.md  TESTING_GUIDE.md  deploy.sh
glpi_dashboard/frontend/: .dockerignore  .env.example  .eslintrc.json  .jscpd.json  .prettierignore  Dockerfile  RELATORIO_TESTES.md  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  playwright.config.e2e.ts  playwright.config.ts  tailwind.config.js  test-api.html  tsconfig.json  vite.config.ts  vitest.config.integration.ts  vitest.config.unit.ts
glpi_dashboard/monitoring/: README.md  alert_rules.yml  docker-compose.yml  prometheus.yml
glpi_dashboard/scripts/: README.md  cleanup_internal_deep.py  cleanup_project.py  cleanup_root.py  format_csv_data.py  format_csv_data_backup.py  glpi_complete_extractor.py  glpi_metrics_collector.py  (+2 more)
(+567 files in other folders)
